Published multiple files

--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"about-me","permalink":"/about-me/","tags":["gardenEntry"]}
+{"dg-publish":true,"dg-path":"about-me","permalink":"/about-me/","pinned":true,"tags":["gardenEntry"]}
 ---
 
 
