Published multiple files

--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -8,14 +8,30 @@
 
 ![andrey photo circle 1.png|200](/img/user/Images/andrey%20photo%20circle%201.png)
 
-Меня зовут Андрея Сычёва, рад вас видеть на своем персональном сайте!
+Меня зовут Андрей Сычёва, рад вас видеть на своем персональном сайте!
 Если сказать о себе одним словом, то я – исследователь.
 
-Согласно глобальному тренду, не ограничиваюсь одной профессией, два моих направления:  маркетинговые и социальные исследования и ландшафтная аналитика.
+Согласно глобальному тренду, не ограничиваюсь одной профессией, две моих основных «ветки»:  маркетинговые исследования и ландшафтная терапия.
 
-**Исследования:**
-- Более 20-ти лет работаю в индустрии маркетинговых исследований – в ведущих иностранных и российских агентствах GfK, Nielsen, Tiburon Research.
-- В этой области всегда выступал в двух ролях – исследователя и менеджера по развитию бизнеса. Как исследователя меня интересуют инсайты и различные методы получить надежные данные, а как менеджера по развитию – новые клиенты, развитие новых рынков и передовые технологии.
+
+Более 20-лет проработал в ведущих международных и исследовательских агентствах GfK, Nilelsen, Tiburon Research. Мое исследовательское резюме можно посмотреть здесь.
+
+Последние  пару лет я глубоко погрузился в тему применения AI в исследованиях и смежных областях:  
+- Развивал навыки использования AI в исследованиях  в  [AI LAB](****https://ai-lab.tech/****) у Дмитрия Соловьева и Андрея Альтшулера. 
+- Учился созданию и использованию AI-инструментов для управления знаниями в  [**AI-Mindset Lab**](https://aimindset.org/)  у Глеба Калинина.
+- Участвовал в создании, тестировании и продвижении инструментов на базе AI  компании Tiburon Research. 
+
+
+
+
+Продуктовые исследования 
+Написание аналитических статей и статей для 
+
+
+
+
+
+
 
 
 
