Published multiple files

--- a/src/site/notes/Исследования/резюме.md
+++ b/src/site/notes/Исследования/резюме.md
@@ -33,7 +33,7 @@
 Стал отвечать за тендеры для всех исследовательских отделов компании.
 Вошел в совет директоров Tiburon Research. 
 
-  Внес существенный вклад в непрерывный  рост компании за счет развития клиентской базы – привлекал новых клиентов, удерживал и развивал ключевых клиентов. Принимал участие в становлении отдела маркетинга и непрерывном развитии и создании новых исследовательских продуктов.
+  Внес существенный вклад в непрерывный  рост компании за счет развития клиентской базы – привлекал новых и развивал ключевых клиентов. Принимал участие в становлении отдела маркетинга и непрерывном развитии и создании новых исследовательских продуктов.
 
   Среди клиентов, с которыми работал регулярно более сотни компаний, включая Сбербанк, Альфа-Банк, Т-Банк, ВТБ, Ozon, Avito, Lamoda, VK, Самокат,  М.Видео, Пятерочка, Черноголовка, Мултон, Мегафон.
 
