--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -8,25 +8,25 @@
 
 ![andrey photo circle 1.png|200](/img/user/Images/andrey%20photo%20circle%201.png)
 
-Меня зовут Андрей Сычёва, рад вас видеть на своем персональном сайте!
-Если сказать о себе одним словом, то я – исследователь.
+Меня зовут Андрей Сычёв, рад вас видеть на своем персональном сайте!
+Если сказать о себе одним словом, то я **исследователь**.
 
-Согласно глобальному тренду, не ограничиваюсь одной профессией, две моих основных «ветки»:  маркетинговые исследования и ландшафтная терапия.
+Согласно глобальному тренду, не ограничиваюсь одной профессией, две моих основных ветки:  
+— **Маркетинговые и социальные исследования,** 
+— **Психологические путешествия** в Грузии, России, Израиле, Турции с использованием метода ландшафтная аналитика. На практике изучаю психологический потенциал путешествий.
 
+**ИССЛЕДОВАНИЯ - основное**
 
-Более 20-лет проработал в ведущих международных и исследовательских агентствах GfK, Nilelsen, Tiburon Research. Мое исследовательское резюме можно посмотреть здесь.
+Более 25-ти лет проработал в ведущих международных и российских исследовательских агентствах GfK, Nielsen, Tiburon Research. Все это время совмещал в себе две роли – исследователя и специалиста по развитию бизнеса. 
 
-Последние  пару лет я глубоко погрузился в тему применения AI в исследованиях и смежных областях:  
-- Развивал навыки использования AI в исследованиях  в  [AI LAB](****https://ai-lab.tech/****) у Дмитрия Соловьева и Андрея Альтшулера. 
-- Учился созданию и использованию AI-инструментов для управления знаниями в  [**AI-Mindset Lab**](https://aimindset.org/)  у Глеба Калинина.
-- Участвовал в создании, тестировании и продвижении инструментов на базе AI  компании Tiburon Research. 
+Последние  пару лет погрузился в тему **применения AI в исследованиях** и смежных областях:  
+- Развивал навыки использования AI в исследованиях в  [AI LAB](****https://ai-lab.tech/****) у Дмитрия Соловьева. 
+- Учился созданию и использованию AI-инструментов для управления знаниями в  [AI Mindset Lab](https://aimindset.org/)  у Глеба Калинина.
+- Участвовал в создании, тестировании и продвижении [инструментов на базе AI ](https://blog.fastuna.ru/insightchat) в компании Tiburon Research. 
 
+Мое [[Исследования/резюме\|резюме]] можно посмотреть здесь.
 
-
-
-Продуктовые исследования 
-Написание аналитических статей и статей для 
-
+**ЛАНДШАФТНАЯ АНАЛИТИКА – основное** 
 
 
 
