Published multiple files

--- a/src/site/notes/Исследования/резюме.md
+++ b/src/site/notes/Исследования/резюме.md
@@ -28,16 +28,24 @@
 
 **2018 – 2025.**  **Директор по развитию бизнеса Fastuna и Tiburon Research.**
 
-Пришел в компанию на этапе запуска онлайн платформы Fastuna. Сейчас это лидирующий продукт для быстрых исследований – тестирования креатива, продуктовых гипотез и UX. 
-С 2020 года начал заниматься продвижением всей линейки исследовательских продуктов Tiburon Research, включая решения на базе AI (здесь поучаствовал в развитии еще на этапах выработки идеи, разработки и тестирования).
-Стал отвечать за тендеры для всех исследовательских отделов компании.
-Вошел в совет директоров Tiburon Research. 
+Этапы работы в компании:
 
-  Внес существенный вклад в непрерывный  рост компании за счет развития клиентской базы – привлекал новых и развивал ключевых клиентов. Принимал участие в становлении отдела маркетинга и непрерывном развитии и создании новых исследовательских продуктов.
+- Пришел в компанию в 2018 году на этапе запуска онлайн платформы Fastuna. Сейчас это лидирующий продукт для быстрых исследований – тестирования креатива, продуктовых гипотез и UX. 
 
-  Среди клиентов, с которыми работал регулярно более сотни компаний, включая Сбербанк, Альфа-Банк, Т-Банк, ВТБ, Ozon, Avito, Lamoda, VK, Самокат,  М.Видео, Пятерочка, Черноголовка, Мултон, Мегафон.
+- С 2020 года начал заниматься продвижением всей линейки исследовательских продуктов Tiburon Research, включая решения на базе AI (начиная с этапа разработки идеи). Вошел в совет директоров компании. Дополнительно стал отвечать за тендеры для всех исследовательских отделов компании.
 
-  В 2024 году ушел с должности директора по работе с клиентами. В течение года занимался:
+- В 2024 году ушел с должности директора по развитию бизнеса. В течение года занимался изучением пользовательского опыта (СX) клиентов Tiburon Research (в контексте повышения эффективности рабочих процессов) и разработкой новых рынков для AI-инструментов компании.
 
-- изучением пользовательского опыта (СX) клиентов Tiburon Research
-- разработкой новых рынков для AI-инструментов компании.
+Достижения:
+
+Внес существенный вклад в непрерывный рост компании в течение всего срока работы:   
+
+- За счет развития клиентской базы = привлечение  новых + удержание и развитие ключевых клиентов,
+- Выстроенной системы обратной связи с клиентами (проблемы, зоны улучшения, потребности) и роли «адвоката» интересов клиентов в производственном и R&D процессах. Это помогало улучшать качество сервиса,  создавать и непрерывно совершенствовать продукты компании,
+- Активного участия в становлении отдела маркетинга и взаимодействии с отделом маркетинга – в том числе участие в создании контента,
+- Отладки тендерных процессов,– это прежде всего помогло снизить нагрузку на менеджеров проектов и количество ошибок, приводящих к проигрышу в тендерах.
+
+
+Среди клиентов, с которыми работал лично на регулярной основе более сотни компаний из различных отраслей, включая Авито, Альфа-Банк, ВТБ, М.Видео, Мегафон, Мултон, Пятерочка, Промсвязьбанк, Русагро, Самокат,  Сбербанк (включая дочерние предприятия), Т-Банк, Черноголовка, Lamoda, Ozon, Splat, Tele2, VK.
+
+ 
