--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -17,7 +17,7 @@
 
 **ИССЛЕДОВАНИЯ - основное**
 
-Более 25-ти лет проработал в ведущих международных и российских исследовательских агентствах GfK, Nielsen, Tiburon Research. Все это время совмещал в себе две роли – исследователя и специалиста по развитию бизнеса. 
+Более 25-ти лет проработал в ведущих международных и российских исследовательских агентствах GfK, Nielsen, Tiburon Research. Все это время совмещал в себе две роли – исследователя и специалиста по развитию бизнеса – продвигал 
 
 Последние  пару лет погрузился в тему **применения AI в исследованиях** и смежных областях:  
 - Развивал навыки использования AI в исследованиях в  [AI LAB](****https://ai-lab.tech/****) у Дмитрия Соловьева. 
