Published multiple files

--- a/src/site/notes/Исследования/резюме.md
+++ b/src/site/notes/Исследования/резюме.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"исследования/CV-research","permalink":"/issledovaniya/cv-research/"}
+{"dg-publish":true,"dg-path":"cv-research","permalink":"/cv-research/"}
 ---
 
 
