Published multiple files

--- a/src/site/notes/Исследования/резюме.md
+++ b/src/site/notes/Исследования/резюме.md
@@ -9,7 +9,7 @@
 
 <details>
 
-  <summary>Подробнее о том, чем занимался в GfK и Nielsen  </summary>
+  <summary>О том, чем занимался в GfK и Nielsen  </summary>
 
   
 
