--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -15,20 +15,18 @@
 — **Маркетинговые и социальные исследования,** 
 — **Психологические путешествия** в Грузии, России, Израиле, Турции с использованием метода ландшафтная аналитика. На практике изучаю психологический потенциал путешествий.
 
-**ИССЛЕДОВАНИЯ - основное**
+**ИССЛЕДОВАНИЯ – коротко**
 
-Более 25-ти лет проработал в ведущих международных и российских исследовательских агентствах GfK, Nielsen, Tiburon Research. Все это время совмещал в себе две роли – исследователя и специалиста по развитию бизнеса – продвигал 
+Более 25-ти лет проработал в ведущих международных и российских исследовательских агентствах GfK, Nielsen, Tiburon Research. Все это время совмещал в себе две роли – исследователя и специалиста по развитию бизнеса.
 
 Последние  пару лет погрузился в тему **применения AI в исследованиях** и смежных областях:  
 - Развивал навыки использования AI в исследованиях в  [AI LAB](****https://ai-lab.tech/****) у Дмитрия Соловьева. 
 - Учился созданию и использованию AI-инструментов для управления знаниями в  [AI Mindset Lab](https://aimindset.org/)  у Глеба Калинина.
 - Участвовал в создании, тестировании и продвижении [инструментов на базе AI ](https://blog.fastuna.ru/insightchat) в компании Tiburon Research. 
 
-Мое [[Исследования/резюме\|резюме]] можно посмотреть здесь.
+Мое [[Основное\|Основное]] можно посмотреть здесь.
 
-**ЛАНДШАФТНАЯ АНАЛИТИКА – основное** 
-
-
+**ЛАНДШАФТНАЯ АНАЛИТИКА – коротко
 
 
 
@@ -38,5 +36,7 @@
 
 
 
-**Контакты:** [Email](mailto:andreysychev@example.com), [GitHub](https://github.com/asychev599), [LinkedIn](https://linkedin.com/in/andreysychev).
+
+
+**Контакты: [Telegram](https://t.me/andreyscyhev), [E-mail ](mailto:sychevonline@gmail.com)
 
