Published multiple files

--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -24,7 +24,7 @@
 - Учился созданию и использованию AI-инструментов для управления знаниями в  [AI Mindset Lab](https://aimindset.org/)  у Глеба Калинина.
 - Участвовал в создании, тестировании и продвижении [инструментов на базе AI ](https://blog.fastuna.ru/insightchat) в компании Tiburon Research. 
 
-Мое [[Основное\|Основное]] можно посмотреть здесь.
+Мое [[Резюме\|Резюме]] можно посмотреть здесь.
 
 **ЛАНДШАФТНАЯ АНАЛИТИКА – коротко
 
