Published multiple files

--- a/src/site/notes/Исследования/Резюме.md
+++ b/src/site/notes/Исследования/Резюме.md
@@ -1,9 +1,9 @@
 ---
-{"dg-publish":true,"permalink":"/issledovaniya/rezyume/"}
+{"dg-publish":true,"dg-path":"research/cv","permalink":"/research/cv/"}
 ---
 
 
-## Резюме Андрей Сычёв – маркетинговые исследования
+## Резюме Андрей Сычёв исследования
 
   **1997 – 2016.**  **Работал в международных исследовательских компаниях GfK и Nielsen на позициях от ассистента до директора по работе с клиентами.** 
 
@@ -47,5 +47,9 @@
 
 
 Среди клиентов, с которыми работал лично на регулярной основе более сотни компаний из различных отраслей, включая Авито, Альфа-Банк, ВТБ, М.Видео, Мегафон, Мултон, Пятерочка, Промсвязьбанк, Русагро, Самокат,  Сбербанк (включая дочерние предприятия), Т-Банк, Черноголовка, Lamoda, Ozon, Splat, Tele2, VK.
+
+Подробности про отдельные направления:
+
+
 
  
