--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -15,7 +15,7 @@
 — **Маркетинговые и социальные исследования,** 
 — **Психологические путешествия** в Грузии, России, Израиле, Турции с использованием метода ландшафтная аналитика. На практике изучаю психологический потенциал путешествий.
 
-**ИССЛЕДОВАНИЯ – коротко**
+**ИССЛЕДОВАНИЯ**
 
 Более 25-ти лет проработал в ведущих международных и российских исследовательских агентствах GfK, Nielsen, Tiburon Research. Все это время совмещал в себе две роли – исследователя и специалиста по развитию бизнеса.
 
@@ -24,9 +24,9 @@
 - Учился созданию и использованию AI-инструментов для управления знаниями в  [AI Mindset Lab](https://aimindset.org/)  у Глеба Калинина.
 - Участвовал в создании, тестировании и продвижении [инструментов на базе AI ](https://blog.fastuna.ru/insightchat) в компании Tiburon Research. 
 
-Мое [[Исследования/Резюме\|Резюме]] можно посмотреть здесь.
+Мое исследовательское [[Исследования/Резюме\|резюме]] можно посмотреть здесь.
 
-**ЛАНДШАФТНАЯ АНАЛИТИКА – коротко
+**ЛАНДШАФТНАЯ АНАЛИТИКА
 
 
 
