Published multiple files

--- a/src/site/notes/Исследования/Резюме.md
+++ b/src/site/notes/Исследования/Резюме.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"research/cv","permalink":"/research/cv/"}
+{"dg-publish":true,"permalink":"/issledovaniya/rezyume/"}
 ---
 
 
