Published multiple files

--- a/src/site/notes/Исследования/Резюме.md
+++ b/src/site/notes/Исследования/Резюме.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/issledovaniya/rezyume/"}
+{"dg-publish":true,"permalink":"/issledovaniya/rezyume/","pinned":true}
 ---
 
 
@@ -48,8 +48,9 @@
 
 Среди клиентов, с которыми работал лично на регулярной основе более сотни компаний из различных отраслей, включая Авито, Альфа-Банк, ВТБ, М.Видео, Мегафон, Мултон, Пятерочка, Промсвязьбанк, Русагро, Самокат,  Сбербанк (включая дочерние предприятия), Т-Банк, Черноголовка, Lamoda, Ozon, Splat, Tele2, VK.
 
-Подробности про отдельные направления:
-
+Подробности про мой опыт в отдельных направлениях:
+- [[Исследования/Опыт в «каче»\|Качественные исследования]]
+- Исследования для НКО  
 
 
  
