Published multiple files

--- a/src/site/notes/Исследования/Опыт в «каче».md
+++ b/src/site/notes/Исследования/Опыт в «каче».md
@@ -8,7 +8,11 @@
 
 **КОМПЛЕКСНЫЕ ПРОЕКТЫ**
 
-С самого начала работы в отрасли специализировался на определенных рынках, где часто управлял **комплексными проектами, состоящими из качественного и количественного этапов**: определял цели для этапов, предлагал методологию, включая (проективные методики), создавал «гайды», самостоятельно проводил первые экспертные и глубинные интервью, участвовал в  написании выводов и презентовал результаты.
+С самого начала работы в отрасли специализировался на определенных рынках, где часто управлял **комплексными проектами, состоящими из качественного и количественного этапов**: 
+- определял цели для этапов, предлагал методологию, создавал «гайды», 
+- самостоятельно проводил первые глубинные и / или экспертные интервью, 
+- участвовал в  написании выводов и презентовал результаты качественного этапа.
+
 Обучался методологии качественных исследований в GfK Academy в Брюсселе и  воркшопах Nielsen, посвященных качественным методикам.
 
 **CUSTDEV В TIBURON RESEARH**
