--- a/src/site/notes/Исследования/Опыт в «каче».md
+++ b/src/site/notes/Исследования/Опыт в «каче».md
@@ -2,32 +2,31 @@
 {"dg-publish":true,"permalink":"/issledovaniya/opyt-v-kache/"}
 ---
 
+**ОПЫТ В КАЧЕСТВЕННЫХ ИССЛЕДОВАНИЯХ**
 
-
-
-
-**КОМПЛЕКСНЫЕ ПРОЕКТЫ**
+**Комплексные проекты** 
 
 С самого начала работы в отрасли специализировался на определенных рынках, где часто управлял **комплексными проектами, состоящими из качественного и количественного этапов**: 
 - определял цели для этапов, предлагал методологию, создавал «гайды», 
 - самостоятельно проводил первые глубинные и / или экспертные интервью, 
+- в некоторых случаях модерировал фокус-группы,
 - участвовал в  написании выводов и презентовал результаты качественного этапа.
 
 Обучался методологии качественных исследований в GfK Academy в Брюсселе и  воркшопах Nielsen, посвященных качественным методикам.
 
-**CUSTDEV В TIBURON RESEARH**
+**СustDev в Tiburon Research**
 
 Во время работы в Tiburon Research регулярно проводил CustDev интервью с различными сегментами клиентов. 
 
 Задачи интервью:
 — изучение трендов рынка и потребностей клиентов для создания стратегии развития компании на ближайшие несколько лет,
-— создание новых и развитие существующих исследовательских продуктов – с участием менеджеров продукта для их вовлечения в понимание потребностей клиентов,
-— повышение эффективности производственных процессов.
-— создания предложения для новых рынков (в частности Employee Experience, Total Experience).
+— создание новых  исследовательских продуктов (отдельно или в паре с менеджером продукта),
+— повышение эффективности производственных процессов,
+— изучение новых направлений (Employee Experience, Total Experience).
 
-**ИССЛЕДОВАНИЕ ДЛЯ НКО**
+**Исследование для НКО**
 
-В течение 2024 года  помогал одному из НКО  научиться получать обратную связь и изучать свою обширную  аудиторию.  Провел исследования, направленных на решение ряд прикладных задач, связанных с SMM: профиль аудитории,  обновление контент-плана, ввод новых рубрик и форматов, коррекция TOV,  запуск медиа-кампании флагманского проекта. 
+В течение 2024 года  помогал одному из НКО получать обратную связь и изучать свою обширную аудиторию.  Провел исследования, направленных на решение ряд прикладных задач, связанных с SMM: изучение профиля аудитории, обновление контент-плана, ввод новых рубрик и форматов, коррекция TOV,  запуск медиа-кампании флагманского проекта. 
 
 В рамках проекта провел порядка 30 глубинных интервью с аудиторией различных медиа-каналов. В интервью также принимал участие представители НКО – это было нужно для развития навыка самостоятельного проведения исследований.
 В этом проекте активно применял навыки работы с AI для анализа полученных данных и написания отчета.
