Published multiple files

--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -9,9 +9,11 @@
 Меня зовут Андрей Сычёв, рад вас видеть на своем персональном сайте!
 Если сказать о себе одним словом, то я **исследователь**.
 
+~~~~ 
 Согласно глобальному тренду, не ограничиваюсь одной профессией, две моих основных ветки:  
-— **Маркетинговые и социальные исследования,** 
-— **Психологические путешествия** в Грузии, России, Израиле, Турции с использованием метода ландшафтная аналитика. На практике изучаю психологический потенциал путешествий.
+— Маркетинговые и социальные исследования, 
+— Психологические путешествия** в Грузии, России, Израиле, Турции с использованием метода ландшафтная аналитика. На практике изучаю психологический потенциал путешествий.
+~~~~ 
 
 **ИССЛЕДОВАНИЯ**
 
@@ -25,15 +27,6 @@
 Мое исследовательское [[Исследования/Резюме\|резюме]] можно посмотреть здесь.
 
 **ЛАНДШАФТНАЯ АНАЛИТИКА
-
-
-
-
-
-
-
-
-
 
 
 **Контакты: [Telegram](https://t.me/andreyscyhev), [E-mail ](mailto:sychevonline@gmail.com)
