Published multiple files

--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -6,16 +6,16 @@
 
 ![andrey photo circle 1.png|200](/img/user/Images/andrey%20photo%20circle%201.png)
 
+~~~~ 
 Меня зовут Андрей Сычёв, рад вас видеть на своем персональном сайте!
-Если сказать о себе одним словом, то я **исследователь**.
-
+Если сказать о себе одним словом, то я — исследователь.
 ~~~~ 
 Согласно глобальному тренду, не ограничиваюсь одной профессией, две моих основных ветки:  
 — Маркетинговые и социальные исследования, 
-— Психологические путешествия** в Грузии, России, Израиле, Турции с использованием метода ландшафтная аналитика. На практике изучаю психологический потенциал путешествий.
-~~~~ 
+— Психологические путешествия с использованием метода ландшафтная аналитика.
 
-**ИССЛЕДОВАНИЯ**
+
+**Коротко про ИССЛЕДОВАНИЯ**
 
 Более 25-ти лет проработал в ведущих международных и российских исследовательских агентствах GfK, Nielsen, Tiburon Research. Все это время совмещал в себе две роли – исследователя и специалиста по развитию бизнеса.
 
@@ -26,7 +26,7 @@
 
 Мое исследовательское [[Исследования/Резюме\|резюме]] можно посмотреть здесь.
 
-**ЛАНДШАФТНАЯ АНАЛИТИКА
+**Коротко про ПСИХОЛОГИЧЕСКИЕ ПУТЕШЕСТВИЯ**
 
 
 **Контакты: [Telegram](https://t.me/andreyscyhev), [E-mail ](mailto:sychevonline@gmail.com)
