Published multiple files

--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -24,9 +24,24 @@
 - Учился созданию и использованию AI-инструментов для управления знаниями в  [AI Mindset Lab](https://aimindset.org/)  у Глеба Калинина.
 - Участвовал в создании, тестировании и продвижении [инструментов на базе AI ](https://blog.fastuna.ru/insightchat) в компании Tiburon Research. 
 
-Мое исследовательское [[Исследования/Резюме\|резюме]] можно посмотреть здесь.
+→ Узнать больше про мой опыт в исследованиях в [[Исследования/Резюме\|резюме]] .
 
 **Коротко про ПСИХОЛОГИЧЕСКИЕ ПУТЕШЕСТВИЯ**
+
+Провожу психологические путешествия в Грузии, России, Израиле, в планах Турция. Вместе с моим коллегой психологом Арсением Белорусцем на практике изучаю психологический эффект путешествий и развиваю метод ландшафтной аналитики. 
+
+Ландшафтная аналитика –  «модерируемое» психологическое путешествие, групповая психотерапия в формате трекинга, включающая в себя взаимодействие с объектами природного и культурного ландшафта.
+
+Как работает ландшафтная аналитика:
+
+- Ведущие разрабатывают маршрут и подбирают точки на нём – объекты природного и культурного ландшафта,
+- Взаимодействие с ландшафтом рождает инсайты –  природа отражает содержание психики и дает важные подсказки,
+- Движение и физическая нагрузка не менее важны, чем взаимодействие с ландшафтными объектами,
+- Ведущие выступают в роли проводников группы в физическом пространстве и пространстве психики,
+- Участники делятся друг с другом полученным опытом.
+
+ [Наш телеграм-канал, посвященный психологическим путешествиям](t.me/outsideinsight)
+
 
 
 **Контакты: [Telegram](https://t.me/andreyscyhev), [E-mail ](mailto:sychevonline@gmail.com)
