--- a/src/site/notes/Исследования/Резюме.md
+++ b/src/site/notes/Исследования/Резюме.md
@@ -49,7 +49,7 @@
 Среди клиентов, с которыми работал лично на регулярной основе более сотни компаний из различных отраслей, включая Авито, Альфа-Банк, ВТБ, М.Видео, Мегафон, Мултон, Пятерочка, Промсвязьбанк, Русагро, Самокат,  Сбербанк (включая дочерние предприятия), Т-Банк, Черноголовка, Lamoda, Ozon, Splat, Tele2, VK.
 
 Подробности про мой опыт в отдельных направлениях:
-- [[Исследования/Опыт в «каче»\|Качественные исследования]]
+- [[Исследования/Qual\|Качественные исследования]]
 - Исследования для НКО  
 
 
