Published multiple files

--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -48,5 +48,5 @@
 ---
 
 
-**Контакты: [Telegram](https://t.me/andreyscyhev), [E-mail ](mailto:sychevonline@gmail.com)
+МОИ КОНТАКТЫ: [Telegram](https://t.me/andreyscyhev), [E-mail ](mailto:sychevonline@gmail.com)
 
