Published multiple files

--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -43,7 +43,9 @@
 - Ведущие выступают в роли проводников группы в физическом пространстве и пространстве психики,
 - Участники делятся друг с другом полученным опытом.
 
- [Наш телеграм-канал, посвященный психологическим путешествиям](t.me/outsideinsight)
+→ Узнать больше про психологические путешествия в нашем [телеграм-канале ](t.me/outsideinsight)
+
+
 
 ---
 
