Published multiple files

--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -25,9 +25,8 @@
 - Учился созданию и использованию AI-инструментов для управления знаниями в  [AI Mindset Lab](https://aimindset.org/)  у Глеба Калинина.
 - Участвовал в создании, тестировании и продвижении [инструментов на базе AI ](https://blog.fastuna.ru/insightchat) в компании Tiburon Research. 
 
-→ Узнать больше про мой опыт в исследованиях в [[Исследования/Резюме\|резюме]] .
+→→ Узнать больше про мой опыт в исследованиях в [[Исследования/Резюме\|резюме]] .
 
----
 
 **Коротко про ПСИХОЛОГИЧЕСКИЕ ПУТЕШЕСТВИЯ**
 
@@ -43,7 +42,7 @@
 - Ведущие выступают в роли проводников группы в физическом пространстве и пространстве психики,
 - Участники делятся друг с другом полученным опытом.
 
-→ Узнать больше про психологические путешествия в нашем [телеграм-канале ](t.me/outsideinsight)
+→→ Узнать больше про психологические путешествия в нашем [телеграм-канале ](t.me/outsideinsight)
 
 
 
