Published multiple files

--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -25,7 +25,7 @@
 - Учился созданию и использованию AI-инструментов для управления знаниями в  [AI Mindset Lab](https://aimindset.org/)  у Глеба Калинина.
 - Участвовал в создании, тестировании и продвижении [инструментов на базе AI ](https://blog.fastuna.ru/insightchat) в компании Tiburon Research. 
 
-→→ Узнать больше про мой опыт в исследованиях в [[Исследования/Резюме\|резюме]] .
+→→ Больше про мой опыт в исследованиях в [[Исследования/Резюме\|резюме]] .
 
 
 **Коротко про ПСИХОЛОГИЧЕСКИЕ ПУТЕШЕСТВИЯ**
@@ -42,12 +42,7 @@
 - Ведущие выступают в роли проводников группы в физическом пространстве и пространстве психики,
 - Участники делятся друг с другом полученным опытом.
 
-→→ Узнать больше про психологические путешествия в нашем [телеграм-канале ](t.me/outsideinsight)
-
-
-
----
-
+→→ Больше про психологические путешествия в нашем [телеграм-канале ](t.me/outsideinsight)
 
 МОИ КОНТАКТЫ: [Telegram](https://t.me/andreyscyhev), [E-mail ](mailto:sychevonline@gmail.com)
 
