Published multiple files

--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -16,7 +16,7 @@
 
 ---
 
-**Коротко про ИССЛЕДОВАНИЯ**
+> **Коротко про ИССЛЕДОВАНИЯ**
 
 Более 25-ти лет проработал в ведущих международных и российских исследовательских агентствах GfK, Nielsen, Tiburon Research. Все это время совмещал в себе две роли – исследователя и специалиста по развитию бизнеса.
 
@@ -28,7 +28,7 @@
 →→ Больше про мой опыт в исследованиях в [[Исследования/Резюме\|резюме]] .
 
 
-**Коротко про ПСИХОЛОГИЧЕСКИЕ ПУТЕШЕСТВИЯ**
+> **Коротко про ПСИХОЛОГИЧЕСКИЕ ПУТЕШЕСТВИЯ**
 
 Провожу психологические путешествия в Грузии, России, Израиле, в планах Турция. Вместе с моим коллегой психологом Арсением Белорусцем на практике изучаю психологический эффект путешествий и развиваю метод ландшафтной аналитики. 
 
