Published multiple files

--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -42,7 +42,7 @@
 - Ведущие выступают в роли проводников группы в физическом пространстве и пространстве психики,
 - Участники делятся друг с другом полученным опытом.
 
-→→ Больше про психологические путешествия в нашем [телеграм-канале ](t.me/outsideinsight)
+→→ Больше про психологические путешествия в нашем [телеграм-канале ](https://t.me/outsideinsight)
 
 МОИ КОНТАКТЫ: [Telegram](https://t.me/andreyscyhev), [E-mail ](mailto:sychevonline@gmail.com)
 
