Published multiple files

--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -21,7 +21,7 @@
 Более 25-ти лет проработал в ведущих международных и российских исследовательских агентствах GfK, Nielsen, Tiburon Research. Все это время совмещал в себе две роли – исследователя и специалиста по развитию бизнеса.
 
 Последние  пару лет погрузился в тему **применения AI в исследованиях** и смежных областях:  
-- Развивал навыки использования AI в исследованиях в  [AI LAB](****https://ai-lab.tech/****) у Дмитрия Соловьева. 
+- Развивал навыки использования AI в исследованиях в  [AI LAB](https://ai-lab.tech) у Дмитрия Соловьева. 
 - Учился созданию и использованию AI-инструментов для управления знаниями в  [AI Mindset Lab](https://aimindset.org/)  у Глеба Калинина.
 - Участвовал в создании, тестировании и продвижении [инструментов на базе AI ](https://blog.fastuna.ru/insightchat) в компании Tiburon Research. 
 
@@ -32,7 +32,7 @@
 
 Провожу психологические путешествия в Грузии, России, Израиле, в планах Турция. Вместе с моим коллегой психологом Арсением Белорусцем на практике изучаю психологический эффект путешествий и развиваю метод ландшафтной аналитики. 
 
-Ландшафтная аналитика –  «модерируемое» психологическое путешествие, групповая психотерапия в формате трекинга, включающая в себя взаимодействие с объектами природного и культурного ландшафта.
+Ландшафтная аналитика –  «модерируемое» психологическое путешествие, групповая психотерапия в формате трекинга, включающего в себя взаимодействие с объектами природного и культурного ландшафта.
 
 Как работает ландшафтная аналитика:
 
